# lolrus

./: .gitignore  CLAUDE.md  LICENSE  README.md  lolrus.spec  pyproject.toml
.github/workflows/: build.yml  pr-check.yml
assets/screenshots/: README.md
docs/: user-guide.md
scripts/: create_mockup_screenshots.py  generate_icon.py
src/lolrus/: __init__.py  __main__.py  app.py  connections.py  s3_client.py
tests/: __init__.py  test_app_utils.py  test_connections.py  test_s3_client.py
